# cs467

./: Cargo.toml
genetic/: .gdb_history  Cargo.toml  README.md  best  current.trace  e200or  fitnesses.csv  guh  iter.trace  new  old  results.py  trace
genetic-algorithms/: Cargo.toml  guh
genetic-algorithms/src/: main.rs  problems.rs  types.rs
genetic-algorithms/src/genetic/: Cargo.toml
genetic-algorithms/src/genetic/src/: lib.rs
genetic-algorithms/src/genetic/tests/: tests.rs
genetic-algorithms/src/problems/: knapsack.rs
genetic-algorithms/stats/: test1_mutation_0.01  test1_mutation_0.02  test1_mutation_0.03  test1_mutation_0.05  test1_mutation_0.09  test1_mutation_0.14  test1_mutation_0.21
genetic/BAC/: BAC-1.txt  BAC-2.txt  BAC-3.txt  gp_script
genetic/GRMN/: GRMN-1.txt  GRMN-2.txt  GRMN-3.txt  gp_script
genetic/KR/: KR-1.txt  KR-2.txt  KR-3.txt  gp_script
genetic/src/: genetic.rs  main.rs  problems.rs  tests.rs
genetic/stats/: test1_mutation_0.00  test1_mutation_0.04  test1_mutation_0.06  test1_mutation_0.07  test1_mutation_0.08  test1_mutation_0.10  test1_mutation_0.11  test1_mutation_0.12  test1_mutation_0.13  test1_mutation_0.15  test1_mutation_0.16  (+11 more)
knapsack/: Cargo.toml  README.md  benchmarks  buh  generateSets.py  guh
learning/: Cargo.toml  tree.json
learning/python/: game.py  play.py  player.py  probs.json  probs.json.bk
learning/python/given/: single-game.py
learning/python/reversi/: comparison.txt  main.py  randomplayer.py  reversi.py  test.py  test_reversi.py
learning/src/: games.rs  main.rs  tictactoe.rs
(+60 files in other folders)
