[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
log = "0.4"
rand = "0.8.5"
indicatif = "0.17.3"
colored = "2.0.0"
serde_json = "1.0.95"
simple_logger = "4.1.0"
